--- a/TrunUpPortal/TrunUpPortal.csproj
+++ b/TrunUpPortal/TrunUpPortal.csproj
@@ -9,13 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="NUnit" Version="4.3.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
     <PackageReference Include="Selenium.Support" Version="4.29.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.29.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="133.0.6943.12600" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Tests\" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="133.0.6943.14100" />
   </ItemGroup>
 
 </Project>
