--- a/TrunUpPortal/TrunUpPortal.csproj
+++ b/TrunUpPortal/TrunUpPortal.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Selenium.Support" Version="4.29.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.29.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="133.0.6943.14100" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.2" />
   </ItemGroup>
 
 </Project>
